app_controllers/infrastructure/kubernetes-deployments/services/juice-shop/01_deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: juice-shop-charles
  labels:
    app: juice-shop-charles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop-charles
  template:
    metadata:
      labels:
        app: juice-shop-charles
    spec:
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
      containers:
      - name: juice-shop-charles
        image: "root/juice-shop-charles:latest"
        ports:
        - containerPort: 3000
        - containerPort: 9000
        volumeMounts:
        - mountPath: "/var/log/challenge1"
          name: task-pv-storage
