app_controllers/infrastructure/kubernetes-deployments/services/juice-shop/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-charles
spec:
  selector:
    app: juice-shop-charles
  ports:
  - name: http
    targetPort: 3000
    port: 80
  - name: cloudcmd
    targetPort: 9000
    port: 9000
