app_controllers/infrastructure/kubernetes-deployments/services/juice-shop/03_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: juice-shop-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: juice-shop-charles.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: juice-shop-charles
          servicePort: http
  - host: juice-shop-charles-cloudcmd.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: juice-shop-charles
          servicePort: cloudcmd
